FE&BE - Pre documentation and further Integration testing